test/fails/bad_casts/functions5.lgl
tag coord a is vec<2>;

canon a f(a x) { // cannot canonicalize a map to the identity type
    return x + [1., 1.];
}

void main() {
    print 1;
}